# math3d-next

./: .env.development  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .yarnrc.yml  CLAUDE.md  Dockerfile  Procfile  README.md  docker-compose.yml  index.html  justfile  package.json  release.md  requirements.txt  tsconfig.json  turbo.json
.devcontainer/webserver/: devcontainer.json
.github/: pull_request_template.md  renovate.json
.github/workflows/: bundlewatch-main.yaml  bundlewatch-pr.yaml  deploy-reusable.yml  e2e.yml  playwright.yml  pr-title-check.yml  release-prod.yml  release-rc.yml  release.yml  release.yml.old  test.yaml
.yarn/releases/: yarn-3.7.0.cjs
client/: .eslintrc.js  .gitignore  bundlewatch.config.json  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client/.storybook/: main.js  preview.js
client/public/: index.html
client/src/: App.tsx  app.tsx  index.css  index.tsx  main.tsx  msw-example.spec.ts  mui.ts  setupTests.ts
scripts/: generate_openapi.sh  setup_worktree_env.sh
server/: .env.development.local  .env.test  .eslintrc.js  .sequelizerc  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server-old/: .env.development.local  .sequelizerc  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
server-old/docker/: Dockerfile
webserver/: Makefile  Procfile  app.json  apt.txt  db.sqlite3  justfile  manage.py  openapi.allauth.yaml  openapi.v1.yaml  openapi.yaml  pyproject.toml
webserver/authentication/: adapter.py  allauth_test.py  api.py  api_test.py  email.py  factories.py  filters.py  forms.py  managers.py  models.py  models_test.py  serializers.py  site_test.py  urls.py  views.py  views_test.py
webserver/authentication/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_change_is_active_default_to_true.py  0004_populate_allauth_emailaddress.py  0005_set_site_name.py  0006_drop_authtoken_token.py
webserver/authentication/templates/account/email/: email_confirmation_message.html  email_confirmation_signup_message.txt  email_confirmation_subject.txt  password_reset_key_message.html  password_reset_key_message.txt  password_reset_key_subject.txt
webserver/authentication/templates/email/: activation.html  password_reset.html  password_reset_inactive.html
webserver/emails/: admin.py  apps.py  models.py  permissions.py  signals.py  urls.py
webserver/emails/migrations/: 0001_initial.py
webserver/main/: api.py  api_test.py  env.py  middleware.py  middleware_test.py  ninja_auth.py  origins.py  settings.py  settings_test.py  test_settings.py  urls.py  views.py  views_test.py
webserver/main/management/commands/: dump_openapi_allauth.py  dump_openapi_v1.py  seed_test_data.py  test_scene.json
webserver/scenes/: admin.py  api.py  api_test.py  apps.py  audit_reserved_keys_test.py  factories.py  filters.py  models.py  models_test.py  permissions.py  pull_scenes_test.py  serializers.py  settings_test.py  urls.py  validators.py  views.py  views_test.py
webserver/scenes/legacy_scene_utils/: IssueLog.py  default_data.py  legacy_data.py  migrate_scene.py  translate.py  translate_test.py
webserver/scenes/management/commands/: audit_reserved_keys.py  audit_scene_items.py  fetch_legacy_scenes.py  migrate_legacy_data.py  pull_scenes.py
webserver/scenes/management/commands/legacy_migration/: __init__.py  translate.py  translate_test.py
webserver/scenes/management/commands/migrate_legacy_data/: translate.py
webserver/scenes/management/migrate_legacy_data/: legacy_data.py  translate.py  translate_test.py
webserver/scenes/math_items/: README.md  __init__.py  schema.jtd.yaml
webserver/scenes/migrations/: 0001_initial.py  0002_alter_scene_items_alter_scene_key.py  0002_scene.py  0003_legacyscene_migration_note.py  0003_scene_author.py  0004_trigram_extension.py  0005_scene_title_gin_trgm_index.py  0006_alter_scene_options.py  0007_created_and_modified_dates.py  0007_rename_created_at_scene_created_date_and_more.py  0008_scene_archived.py  0009_alter_legacyscene_key_alter_scene_key.py  0010_scene_times_accessed.py  0011_set_calculated_visibility.py  0012_alter_scene_items.py  0013_alter_scene_items.py  0014_set_z_order.py  0015_scene_is_legacy.py  0016_alter_scene_items.py  0017_scene_key_reserved.py
webserver/scenes/schemas/: __init__.py  math_items.py  math_items_test.py  scenes.py
webserver/scenes/tests/: data.py  models_test.py  validator_audit_test.py
webserver/scripts/: setup_python.sh
webserver/scripts/test/: openapi_allauth_spec_check.sh  openapi_spec_check.sh  openapi_v1_spec_check.sh
webserver/utils/: test_utils.py
(+349 files in other folders)
