[project]
name = "math3d-webserver"
version = "0.1.0"
description = ""
authors = [ { name = "Chris Chudzicki" } ]
requires-python = ">=3.12,<3.13"
dependencies = [
	"Django>=5.0.0,<6.0.0",
	"djangorestframework>=3.15.1,<4.0.0",
	"dj-database-url>=2.0.0,<3.0.0",
	"tqdm>=4.64.1,<5.0.0",
	"jtd>=0.1.1,<0.2.0",
	"pyyaml>=6.0,<7.0",
	"gunicorn>=23.0.0,<24.0.0",
	"django-cors-headers>=4.1.0,<5.0.0",
	"django-environ>=0.12.0,<0.13.0",
	"faker>=24.0.0,<25.0.0",
	"djoser>=2.2.0,<3.0.0",
	"drf-spectacular>=0.28.0,<0.29.0",
	"django-anymail[mailjet]>=10.2,<11.0",
	"django-filter>=23.5,<24.0.0",
	"psycopg>=3.2.10",
	"whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
	"mypy>=1.0.0,<2.0.0",
	"django-stubs>=5.0.0,<6.0.0",
	"types-tqdm>=4.64.7.15,<5.0.0",
	"djangorestframework-stubs[compatible-mypy]>=3.0.0,<4.0.0",
	"pytest>=8.0.0,<9.0.0",
	"pytest-django>=4.5.2,<5.0.0",
	"types-dj-database-url>=1.2.0.1,<2.0.0",
	"lxml>=5.0.0,<6.0.0",
	"cssselect>=1.2.0,<2.0.0",
	"lxml-stubs>=0.5.0,<0.6.0",
	"factory-boy>=3.3.0,<4.0.0",
	"types-factory-boy>=0.4.1,<0.5.0",
	"django-filter-stubs>=0.1.3,<0.2.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = "djoser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "environ.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.test_settings"
