[project]
name = "math3d-webserver"
version = "0.1.0"
description = ""
authors = [ { name = "Chris Chudzicki" } ]
requires-python = ">=3.12,<3.13"
dependencies = [
	"Django>=6.0.7,<7.0.0",
	"dj-database-url>=2.3.0,<3.0.0",
	"tqdm>=4.64.1,<5.0.0",
	"pyyaml>=6.0.3,<7.0",
	"gunicorn>=23.0.0,<24.0.0",
	"django-cors-headers>=4.9.0,<5.0.0",
	"faker>=24.14.1,<25.0.0",
	"django-anymail[mailjet]>=10.3,<11.0",
	"psycopg>=3.2.10",
	"whitenoise>=6.11.0",
	"django-allauth>=65.0,<66.0",
	"django-ninja>=1.6.2,<2.0",
	"pydantic-settings>=2.7,<3.0",
]

[dependency-groups]
dev = [
	"mypy>=1.0.0,<2.0.0",
	"django-stubs>=6.0.7,<7.0.0",
	"types-tqdm>=4.64.7.15,<5.0.0",
	"pytest>=9.0.3,<9.1.0",
	"pytest-django>=4.5.2,<5.0.0",
	"types-dj-database-url>=1.3.0.4,<2.0.0",
	"lxml>=5.4.0,<6.0.0",
	"cssselect>=1.2.0,<2.0.0",
	"lxml-stubs>=0.5.0,<0.6.0",
	"factory-boy>=3.3.3,<4.0.0",
	"types-factory-boy>=0.4.1,<0.5.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "allauth.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "main.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.test_settings"
# Promote DeprecationWarnings to errors so deprecated django-ninja / Pydantic usage
# fails the suite instead of scrolling past unnoticed.
filterwarnings = ["error::DeprecationWarning"]
